[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eqtmfusion"
version = "0.1.0"
description = "eQTM-guided multi-omics ML framework for predicting asthma severity, lung function, IgE, and other clinical outcomes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["multi-omics", "eQTM", "asthma", "bioinformatics", "machine-learning", "methylation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "click>=8.1",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
full = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "shap>=0.44",
    "lime>=0.2",
    "umap-learn>=0.5",
    "seaborn>=0.13",
    "networkx>=3.2",
    "Boruta>=0.3",
    "weasyprint>=61.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[project.scripts]
eqtmfusion = "eqtmfusion.cli.main:cli"

[tool.setuptools.packages.find]
include = ["eqtmfusion*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
